[package]
name = "sjconv"
version = "1.0.0"
edition = "2024"
description = "A simple standalone convolver for JACK"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fstxz/sjconv"
keywords = ["jack", "convolver", "audio", "convolution"]
categories = ["command-line-utilities", "multimedia::audio"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[dependencies]
jack = "0.13.2"
fft-convolver = "0.2.0"
hound = "3.5.1"
argh = { version = "0.1", default-features = false, features = ["help"] }
